--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -5,11 +5,11 @@ footer {
     align-items: center;
     width: 100%;
     height: 27.3125rem;
-    background: #283618;
+    background: var(--secondary-green);
 }
 
 .footer-h2 {
-    color: #FEFAE0;
+    color: var(--white);
     font-family: Inter;
     font-size: 2rem;
     font-weight: 700;
@@ -30,7 +30,7 @@ footer {
 }
 
 .footer-container-links span {
-    color: #FEFAE0;
+    color: var(--white);
     font-size: 1.5rem;
     font-weight: 600;
 }
@@ -45,7 +45,7 @@ footer {
 }
 
 .footer-container-links ul > li > a {
-    color: #FEFAE0;
+    color: var(--white);
     font-size: 1.125rem;
     font-weight: 400;
     text-decoration: none;    
@@ -54,7 +54,7 @@ footer {
 .line {
     width: 50rem;
     height: 0.0625rem;
-    background: #FEFAE0;
+    background: var(--white);
 }
 
 .information {
@@ -67,13 +67,13 @@ footer {
 }
 
 .information p {
-    color: #FEFAE0;
+    color: var(--white);
     font-size: 1.125rem;
     font-weight: 400;
 }
 
 .information a {
-    color: #FEFAE0;
+    color: var(--white);
     font-family: Inter;
     font-size: 1.125rem;
     font-style: normal;
