--- a/src/global.css
+++ b/src/global.css
@@ -15,3 +15,24 @@
   margin: 0;
   font-family: 'inter', sans-serif;
 }
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: var(--font-color);
+  border-radius: 12px;
+}
+
+body::-webkit-scrollbar-track-piece {
+  border-radius: 12px;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
+  background-color: var(--font-color);
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background: hsla(88, 38%, 15%, 1);
+}
