--- a/src/components/bighero/style.css
+++ b/src/components/bighero/style.css
@@ -1,11 +1,18 @@
+.container-big-hero {
+  height: 80vh;
+  background-color: var(--primary-green);
+}
+
 .big-hero-container {
     display: grid;
     grid-template-columns: 55% 45%;
     gap: 1rem;
-    height: 60vh;
+    height: 100vh;
     padding: 2.5rem 10rem;
     background-color: var(--secondary-green);
   }
+
+  
   
   .big-hero-img-btn > img {
     width: 60%;
