--- a/src/pages/produtos/style.css
+++ b/src/pages/produtos/style.css
@@ -119,3 +119,60 @@
 .form-avaliacao {
     width: 25rem;
 }
+
+
+
+.offcanvas-body {
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .offcanvas-header {
+    font-size: 1rem;
+    font-weight: bold;
+    background-color: var(--primary-green);
+  }
+
+  .item-carrinho {
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+  .div-center img {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 8px 8px 0px 0px;
+  }
+
+  .div-center h3 {
+    font-size: 1rem;
+  }
+
+  .container-button-carrinho {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 0.3rem;
+    gap: 0.1rem;
+  }
+
+  .container-div {
+    display: flex;
+
+  }
+
+  .div-center {
+    display: flex;
+    flex-direction: column;
+    width: 10rem;
+    cursor: pointer;
+    border-radius: 0.5rem;
+    margin: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+
+  .btn-carrinho {
+    display: none;
+  }
