--- a/src/components/menuAreaLogada/styleMenuAreaLogada.css
+++ b/src/components/menuAreaLogada/styleMenuAreaLogada.css
@@ -23,3 +23,30 @@ a.btnSimple:hover{
 .btnSimple i{
     font-size: 2rem;
 }
+
+.user {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 52px;
+    height: 52px;
+    border-radius: 50%;
+    background-color: var(--primary-green);
+}
+
+.user img {
+    width: 40px;
+    height: 40px;
+}
+
+.login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.2rem
+}
+
+.login span {
+    color: var(--white);
+    font-weight: 700;
+}
